yml/svc/ingress/http-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingrss-test
spec:
  rules:
   - host: ingrss.test.com
     http:
       paths:
         - path: /
           backend:
             serviceName: nginx-svc
             servicePort: 80
